# pybind11-example

./: CMakeLists.txt  test.sh
include/: hello.h
python/: test.py
src/: hello.c  main.cpp
